added Final amount to sales printing
