# cmd/api/docs/swagger.yaml
@@ -908,22 +908,22 @@ paths:
       description: Generates and downloads a sales report in either PDF or Excel format
         for the given day, month, and year.
       parameters:
-      - description: Year of the sales report
+      - description: Year of the sales report (e.g., 2024)
         in: query
         name: year
         required: true
         type: integer
-      - description: Month of the sales report
+      - description: Month of the sales report (1-12)
         in: query
         name: month
         required: true
         type: integer
-      - description: Day of the sales report
+      - description: Day of the sales report (1-31)
         in: query
         name: day
         required: true
         type: integer
-      - description: Download format (pdf or excel), defaults to excel
+      - description: 'Download format: ''pdf'' or ''excel'' (defaults to ''excel'')'
         in: query
         name: download
         type: string
@@ -945,43 +945,6 @@ paths:
       security:
       - BearerTokenAuth: []
       summary: Generate and download sales report by date
-      tags:
-      - Admin Sales Reports
-  /admin/salesreport/print:
-    get:
-      consumes:
-      - application/json
-      description: Generates and retrieves a sales report based on the provided start
-        and end dates.
-      parameters:
-      - description: Start date in YYYY-MM-DD format
-        in: query
-        name: start
-        required: true
-        type: string
-      - description: End date in YYYY-MM-DD format
-        in: query
-        name: end
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Sales report retrieved successfully
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: 'Bad request: Start or end date is missing'
-          schema:
-            $ref: '#/definitions/response.Response'
-        "500":
-          description: 'Internal server error: Unable to retrieve sales report'
-          schema:
-            $ref: '#/definitions/response.Response'
-      security:
-      - BearerTokenAuth: []
-      summary: Generate sales report by date range
       tags:
       - Admin Sales Reports
   /admin/unblock:
